--- a/src/main/resources/application-h2.properties
+++ b/src/main/resources/application-h2.properties
@@ -1,15 +1,15 @@
 #https://docs.spring.io/spring-boot/docs/current/reference/html/application-properties.html
 
-#CONFIGURAÇÃO DO SERVIDOR
+#CONFIGURAï¿½ï¿½O DO SERVIDOR
 server.port=8080
 server.servlet.context-path=/api/orcamento
 application.name=Sistema Orcamento
 
-#EM AMBIENTE DE PRODUÇÃO A LINHA ABAIXO DEVERÁ SER COMENTADA
+#EM AMBIENTE DE PRODUï¿½ï¿½O A LINHA ABAIXO DEVERï¿½ SER COMENTADA
 #server.error.include-message=always
 #server.error.include-stacktrace=always
 
-#CONFIGURAÇÕES DE CONEXÃO COM O BANCO DE DADOS
+#CONFIGURAï¿½ï¿½ES DE CONEXï¿½O COM O BANCO DE DADOS
 spring.datasource.url=jdbc:h2:mem:OrcamentoDB
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
@@ -18,10 +18,10 @@ spring.datasource.password=
 #HIBERNATE DDL AUTO (create, create-drop, validate, update, none)
 spring.jpa.hibernate.ddl-auto=update
 
-#CONFIGURAÇÃO QUE DEFINE A FORMA COMO O MAPEAMENTO DO JPA IRÁ TRABALHAR
+#CONFIGURAï¿½ï¿½O QUE DEFINE A FORMA COMO O MAPEAMENTO DO JPA IRï¿½ TRABALHAR
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-#CONFIGURAÇÕES ESPECÍFICAS PARA O BANCO DE DADOS H2
+#CONFIGURAï¿½ï¿½ES ESPECï¿½FICAS PARA O BANCO DE DADOS H2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 
@@ -29,5 +29,5 @@ spring.h2.console.path=/h2
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-#CONFIGURAÇÃO DO SWAGGER
-spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+#CONFIGURAï¿½ï¿½O DO SWAGGER
+spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
