--- a/src/main/resources/application-mysql.properties
+++ b/src/main/resources/application-mysql.properties
@@ -1,16 +1,16 @@
 #https://docs.spring.io/spring-boot/docs/current/reference/html/application-properties.html
 
-#CONFIGURAÇÃO DO SERVIDOR
+#CONFIGURAï¿½ï¿½O DO SERVIDOR
 server.port=8080
 server.servlet.context-path=/api/orcamento
 application.name=Sistema Orcamento
 
-#EM AMBIENTE DE PRODUÇÃO A LINHA ABAIXO DEVERÁ SER COMENTADA
+#EM AMBIENTE DE PRODUï¿½ï¿½O A LINHA ABAIXO DEVERï¿½ SER COMENTADA
 #server.error.include-message=always
 #server.error.include-stacktrace=always
 
-#CONFIGURAÇÕES DE CONEXÃO COM O BANCO DE DADOS
-spring.datasource.url=jdbc:mysql://${DB_URL}
+#CONFIGURAï¿½ï¿½ES DE CONEXï¿½O COM O BANCO DE DADOS
+spring.datasource.url=jdbc:${DB_URL}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
@@ -18,12 +18,12 @@ spring.datasource.password=${DB_PASSWORD}
 #HIBERNATE DDL AUTO (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto=update
 
-#CONFIGURAÇÃO QUE DEFINE A FORMA COMO O MAPEAMENTO DO JPA IRÁ TRABALHAR
+#CONFIGURAï¿½ï¿½O QUE DEFINE A FORMA COMO O MAPEAMENTO DO JPA IRï¿½ TRABALHAR
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 #LOGANDO/PRINT DOS COMANDOS SQL GERADOS PELO SPRING DATA
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-#CONFIGURAÇÃO DO SWAGGER
-spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+#CONFIGURAï¿½ï¿½O DO SWAGGER
+spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
